(3) Changed: Changed paramter for tca back to 10000 for largest component.

------------------------------------------------------------------------
r1065 | gaser | 2016-11-05 17:22:25 +0100 (Sa, 05 Nov 2016) | 9 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_results.m

(1) Changed: Added new plot to cat_surf_results and changed positions and 
    saving.
(2) Changed: Added use of "y" as global variable in cat12.m for calling
    cat_surf_results.m

------------------------------------------------------------------------
r1066 | gaser | 2016-11-07 09:21:32 +0100 (Mo, 07 Nov 2016) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_results.m

(1) Changed: some cosmetic changes to cat_surf_result.m


------------------------------------------------------------------------
r1067 | dahnke | 2016-11-07 15:11:07 +0100 (Mo, 07 Nov 2016) | 22 lines

Changed paths:
M       CHANGES.txt
M       cat_defaults.m
M       cat_main.m
M       cat_surf_createCS.m
M       cat_surf_gyrification.m
M       cat_tst_cattest.m
M       html/cat_FAQ.html
M       internal/cat_io_volctype.m
M       tbx_cfg_cat.m
M       templates_1.50mm/aal.nii
M       templates_1.50mm/cat.nii
M       templates_1.50mm/cobra.nii
D       templates_1.50mm/l1A.nii
M       templates_1.50mm/lpba40.nii

(1) Fixed:    Updated cobra atlas to HR version. 
(2) Fixed:    Set aal, lpba40 and cat atlas map to uint8.
(3) Changed:  Use atlas text file for GUI help of each atlas.
(4) Fixed:    Small corrections in developer WM depth maps in "cat_surf_createCS".  


------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       cat_defaults.m
M       cat_surf_results.m
M       cat_vol_slice_overlay.m

Changed: Fonts should be now hopefully printed correctly while saving images
in cat_surf_results.m and cat_vol_slice_overlay.m.
------------------------------------------------------------------------
r1068 | gaser | 2016-11-08 12:42:26